Let commands auto-complete what you type.